// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubTitle should render 1`] = `
<small
  className="tc-subheader-details-text-subtitle theme-tc-subheader-details-text-subtitle"
>
  mySubTitle
</small>
`;

exports[`SubTitle should render in loading mode 1`] = `
<withI18nextTranslation(Skeleton)
  className="tc-subheader-details-loading-subtitle theme-tc-subheader-details-loading-subtitle"
  size="large"
  type="text"
/>
`;

exports[`SubTitle should render with a label 1`] = `
<Label
  bsClass="label"
  bsStyle="default"
  className="label-info theme-label-info"
>
  mySubTitle
</Label>
`;

exports[`TitleSubHeader should render 1`] = `
<div
  className="tc-subheader-details theme-tc-subheader-details"
>
  <Icon
    className="tc-subheader-details-icon theme-tc-subheader-details-icon"
    name="myIconId"
  />
  <div
    className="tc-subheader-details-text theme-tc-subheader-details-text"
  >
    <div
      className="tc-subheader-details-text-title theme-tc-subheader-details-text-title"
    >
      <TooltipTrigger
        label="myTitle"
        tooltipPlacement="bottom"
      >
        <h1
          className="tc-subheader-details-text-title-wording theme-tc-subheader-details-text-title-wording"
        >
          myTitle
        </h1>
      </TooltipTrigger>
    </div>
    <SubTitle
      t={[Function]}
    />
  </div>
</div>
`;

exports[`TitleSubHeader should render 2`] = `
<div
  className="tc-subheader-details theme-tc-subheader-details"
>
  <div
    className="tc-subheader-details-text theme-tc-subheader-details-text"
  >
    <div
      className="tc-subheader-details-text-title theme-tc-subheader-details-text-title"
    >
      <TooltipTrigger
        label="myTitle"
        tooltipPlacement="bottom"
      >
        <h1
          className="tc-subheader-details-text-title-wording theme-tc-subheader-details-text-title-wording"
        >
          myTitle
        </h1>
      </TooltipTrigger>
    </div>
    <SubTitle
      subTitle="mySubTitle"
      t={[Function]}
    />
  </div>
</div>
`;
